added StaffChat toggle option